Update Java version to Java SE 8